feat: add get toc
